|-- FIXED -| Overflow-x, -y

--- a/0x02-CSS_advanced/styles/30-style.css
+++ b/0x02-CSS_advanced/styles/30-style.css
@@ -662,7 +662,8 @@ ul.row {
 
 .card-work .card-outer {
   position: relative;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .card-work .card-image img {
